<resources>
    <string name="app_name">Health Diary</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_community">Community</string>
    <string name="title_health">Health</string>
    <string name="title_my">My</string>
    <string name="skip">Skip</string>
    <string name="guest">Guest</string>
    <string name="guest_description">Please Login First</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="devices">Devices</string>
    <string name="base">Base</string>
    <string name="more">More</string>
    <string name="check_for_update">Check for Update</string>
    <string name="about_the_app">About the App</string>
    <string name="version">Version 1.0</string>
    <string name="lang_en">English</string>
    <string name="lang_zh_CN">Simplified Chinese(简体中文)</string>
    <string name="lang_zh_TW">Traditional Chinese(繁体中文)</string>
    <string name="topnews">Top News for you</string>
    <string name="news_all">All</string>
    <string name="news_report">Report</string>
    <string name="news_chroniccare">Chronic Care</string>
    <string name="news_fitness">Fitness</string>
    <string name="news_diet">Diet</string>
    <string name="newstitle1">The Top COVID-19 Hot Spots in the U.S.</string>
    <string name="newscontent1">These are the 25 counties with the highest recent averages for new COVID cases per capita...</string>
    <string name="newsauthor1">Christopher Wolf and Sharon Lurye</string>
    <string name="newstime1">42 mins ago</string>
    <string name="newstitle2">New study links ultra-processed foods and colorectal cancer in men</string>
    <string name="newscontent2">A new study links men who consumed high rates of ultra-processed foods to a 29% higher...</string>
    <string name="newsauthor2">Tufts University, Health Sciences Campus</string>
    <string name="newstime2">1 hour ago</string>
    <string name="newstitle3">Diet improve immunotherapy outcomes in advanced melanoma</string>
    <string name="newscontent3">There is an association between the Mediterranean diet and the overall response rate...</string>
    <string name="newsauthor3">Paul Ian Cross, Catherine Carver, MPH</string>
    <string name="newstime3">4 hours ago</string>
    <string name="newstitle4">Can zero-calorie sweeteners raise your risk for cardiovascular disease?</string>
    <string name="newscontent4">There is an association between the Mediterranean diet and the overall response rate...</string>
    <string name="newsauthor4">Erika Watts</string>
    <string name="newstime4">14 hours ago</string>
    <string name="searching_update">Searching for new version…</string>
    <string name="no_update">The current APP is the latest version. </string>
    <string name="app_description">Health Diary is a health management APP. It aims to provide healthcare services for chronic patients. </string>
    <string name="author_Gao">Developer\n\nGao Jiaxiang\nSWE1909468</string>
    <string name="author_Rao">Rao Yulin\nSWE1909488</string>
    <string name="author_Xiang">Xiang Xingzhou\nDMT1909203</string>
    <string name="General">General</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="server_client_id" translatable="false">34100753456-u8d4h1allue3da32omovfsls385fvtuj.apps.googleusercontent.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="if_you_don_t_an_account">If you don’t an account</string>
    <string name="register_here">Register Here!</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="send">Send</string>
    <string name="enter_vertify_code">Vertify Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="_100">100%</string>
    <string name="connected">Connected</string>
    <string name="_92968">92,968</string>
    <string name="steps">Steps</string>
    <string name="kcal">kcal</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="help_and_support">Help and Support</string>
    <string name="how_can_we_help_you">How Can We Help You?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="top_questions">Top Questions</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_doctor_info">DoctorInfoActivity</string>
    <string name="news_content_title">The Top COVID-19 Hot Spots in the U.S.</string>
    <string name="news_content_abstract">These are the 25 counties with the highest recent averages for new COVID cases per capita.
    </string>
    <string name="news_content_author">By Christopher Wolf and Sharon Lurye |</string>
    <string name="news_content_time">Oct. 3, 2022, at 11:38 a.m.</string>
    <string name="news_content_body1">COVID-19 case counts in the U.S. ticked down in recent days, based on provisional data from the Centers for Disease Control and Prevention.</string>
    <string name="news_content_body2"> The U.S. tallied a daily average of about 45,700 new COVID-19 cases over the seven days that ended Sep. 29, and a daily average of 325 deaths in that same time frame. In contrast, the averages one week earlier were about 54,200 cases and 375 deaths per day.</string>
    <string name="news_conent_figure_title">Top 25 COVID-19 Hot Spots in the U.S.</string>
    <string name="news_content_figure_desc">7-day average as of Sep. 29, 2022.</string>
</resources>