<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ui.activity.NewsContentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--Title and back button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/ic_back" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="35dp"
                        android:fontFamily="@font/dmsans_bold"
                        android:gravity="center"
                        android:text="@string/news_content_title"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:fontFamily="@font/dmsans_regular"
                        android:gravity="center"
                        android:text="@string/news_content_abstract"
                        android:textScaleX="1.2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/dmsans_regular"
                        android:text="@string/news_content_author" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/dmsans_regular"
                        android:text="@string/news_content_time"
                        android:textColor="#0768B5" />
                </LinearLayout>

            </LinearLayout>
            <!--Body of news content-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/dmsans_regular"
                android:justificationMode="inter_word"
                android:text="@string/news_content_body1"
                android:textScaleX="1.2"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/dmsans_regular"
                android:justificationMode="inter_word"
                android:text="@string/news_content_body2"
                android:textScaleX="1.2"
                android:textSize="18dp"
                android:textStyle="bold" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true" />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
              android:textSize="20dp"
              android:textStyle="bold"
            android:fontFamily="@font/dmsans_medium"
              android:textColor="@color/black"
            android:text="@string/news_conent_figure_title"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="365dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/news_table"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/dmsans_regular"
                android:text="@string/news_content_figure_desc"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>