<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.activity.HelpActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tv_title_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        android:layout_marginStart="10dp"
        android:text="@string/help_and_support"
        android:gravity="center"
        style="@style/activity_title" />

    <TextView
        android:id="@+id/tv_how_can_we_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_can_we_help_you"
        android:textColor="@color/black"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_search"
        android:queryBackground="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_how_can_we_help"
        android:searchIcon="@drawable/ic_search"
        android:closeIcon="@drawable/ic_close"
        android:layout_marginTop="15dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_question_1"
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#DFF1FF"
                app:cardElevation="10dp">
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="#E8FFEB"
                app:cardElevation="10dp">
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="#FFECEF"
                android:layout_marginStart="15dp"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="20dp"
                app:cardElevation="10dp">
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_top_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/top_questions"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

<!--    TODO: 目前高度设为固定值，寻找更好的办法！-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_top_questions"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_questions"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_top_question"
        android:layout_marginTop="20dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>